Fixed layout issues on the testimonials section for mobile phones

--- a/src/Views/HomePage/HomePage.scss
+++ b/src/Views/HomePage/HomePage.scss
@@ -35,7 +35,7 @@
 
 @media (max-width: 599px) {
   .about-divider {
-    top: 68px;
+    top: 104px;
     width: 103% !important;
   }
 }
